更新了一些判断的细节

--- a/stable/data_fetch.ipynb
+++ b/stable/data_fetch.ipynb
@@ -33,17 +33,17 @@
      "output_type": "stream",
      "text": [
       "         name           tvl\n",
-      "17   Ethereum  7.587260e+10\n",
-      "47     Solana  9.273596e+09\n",
-      "92       Tron  8.023196e+09\n",
-      "4         BSC  5.643002e+09\n",
-      "54    Bitcoin  4.827153e+09\n",
-      "12       Base  3.972185e+09\n",
-      "16   Arbitrum  3.324081e+09\n",
-      "95        Sui  1.796125e+09\n",
-      "13  Avalanche  1.568549e+09\n",
-      "58      Aptos  1.233437e+09\n",
-      "18    Polygon  1.175349e+09\n"
+      "16   Ethereum  7.180617e+10\n",
+      "47     Solana  8.736776e+09\n",
+      "92       Tron  7.465960e+09\n",
+      "54    Bitcoin  6.945383e+09\n",
+      "10        BSC  5.664515e+09\n",
+      "11       Base  3.715635e+09\n",
+      "18   Arbitrum  3.193690e+09\n",
+      "95        Sui  1.695768e+09\n",
+      "13  Avalanche  1.449431e+09\n",
+      "17    Polygon  1.156530e+09\n",
+      "59      Aptos  1.144239e+09\n"
      ]
     }
    ],
@@ -260,10 +260,10 @@
       "Saved fee data for Solana to ./data\\fee\\02_Solana_fee.csv\n",
       "Saved tvl data for Tron to ./data\\tvl\\03_Tron_tvl.csv\n",
       "Saved fee data for Tron to ./data\\fee\\03_Tron_fee.csv\n",
-      "Saved tvl data for BSC to ./data\\tvl\\04_BSC_tvl.csv\n",
-      "Saved fee data for BSC to ./data\\fee\\04_BSC_fee.csv\n",
-      "Saved tvl data for Bitcoin to ./data\\tvl\\05_Bitcoin_tvl.csv\n",
-      "Saved fee data for Bitcoin to ./data\\fee\\05_Bitcoin_fee.csv\n",
+      "Saved tvl data for Bitcoin to ./data\\tvl\\04_Bitcoin_tvl.csv\n",
+      "Saved fee data for Bitcoin to ./data\\fee\\04_Bitcoin_fee.csv\n",
+      "Saved tvl data for BSC to ./data\\tvl\\05_BSC_tvl.csv\n",
+      "Saved fee data for BSC to ./data\\fee\\05_BSC_fee.csv\n",
       "Saved tvl data for Base to ./data\\tvl\\06_Base_tvl.csv\n",
       "Saved fee data for Base to ./data\\fee\\06_Base_fee.csv\n",
       "Saved tvl data for Arbitrum to ./data\\tvl\\07_Arbitrum_tvl.csv\n",
@@ -272,30 +272,30 @@
       "Saved fee data for Sui to ./data\\fee\\08_Sui_fee.csv\n",
       "Saved tvl data for Avalanche to ./data\\tvl\\09_Avalanche_tvl.csv\n",
       "Saved fee data for Avalanche to ./data\\fee\\09_Avalanche_fee.csv\n",
-      "Saved tvl data for Aptos to ./data\\tvl\\10_Aptos_tvl.csv\n",
-      "Saved fee data for Aptos to ./data\\fee\\10_Aptos_fee.csv\n",
-      "Saved tvl data for Polygon to ./data\\tvl\\11_Polygon_tvl.csv\n",
-      "Saved fee data for Polygon to ./data\\fee\\11_Polygon_fee.csv\n",
+      "Saved tvl data for Polygon to ./data\\tvl\\10_Polygon_tvl.csv\n",
+      "Saved fee data for Polygon to ./data\\fee\\10_Polygon_fee.csv\n",
+      "Saved tvl data for Aptos to ./data\\tvl\\11_Aptos_tvl.csv\n",
+      "Saved fee data for Aptos to ./data\\fee\\11_Aptos_fee.csv\n",
       "Saved volume data for Ethereum to ./data\\volume\\01_Ethereum_volume.csv\n",
       "Saved volume data for Solana to ./data\\volume\\02_Solana_volume.csv\n",
       "Saved volume data for Tron to ./data\\volume\\03_Tron_volume.csv\n",
-      "Saved volume data for BSC to ./data\\volume\\04_BSC_volume.csv\n",
       "Skipping Bitcoin for volume\n",
+      "Saved volume data for BSC to ./data\\volume\\05_BSC_volume.csv\n",
       "Saved volume data for Base to ./data\\volume\\06_Base_volume.csv\n",
       "Saved volume data for Arbitrum to ./data\\volume\\07_Arbitrum_volume.csv\n",
       "Saved volume data for Sui to ./data\\volume\\08_Sui_volume.csv\n",
       "Saved volume data for Avalanche to ./data\\volume\\09_Avalanche_volume.csv\n",
-      "Saved volume data for Aptos to ./data\\volume\\10_Aptos_volume.csv\n",
-      "Saved volume data for Polygon to ./data\\volume\\11_Polygon_volume.csv\n",
+      "Saved volume data for Polygon to ./data\\volume\\10_Polygon_volume.csv\n",
+      "Saved volume data for Aptos to ./data\\volume\\11_Aptos_volume.csv\n",
       "Columns in DataFrame for Ethereum: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
       "       low      updatedAt  timestamp     open    volume     high    close  \\\n",
-      "0     1170  1668556464865 2022-11-14  1205.53  49483570   1290.9  1244.15   \n",
-      "1  1233.04  1668642771271 2022-11-15  1241.47  31102447     1290   1254.3   \n",
-      "2  1185.42  1668729201093 2022-11-16  1252.39  31394991  1268.49  1215.95   \n",
-      "3   1181.1  1668815611793 2022-11-17  1223.45  31155134  1228.98  1200.31   \n",
-      "4  1200.35  1668902391504 2022-11-18  1216.21  20739719     1235  1213.03   \n",
+      "0   1078.2  1669161249514 2022-11-21  1140.89  48191112     1148  1107.25   \n",
+      "1  1072.45  1669247905888 2022-11-22  1106.88  40048819  1142.86  1139.13   \n",
+      "2  1127.11  1669334259732 2022-11-23  1134.15  35853278  1191.63  1184.37   \n",
+      "3  1180.58  1669420571251 2022-11-24  1181.62  28742857   1217.6  1203.07   \n",
+      "4  1168.13  1669506970007 2022-11-25  1194.34  24973788  1209.53  1198.75   \n",
       "\n",
       "                 instrument  \n",
       "0  ETHUSDT-OKX-00000000-FUT  \n",
@@ -308,11 +308,11 @@
       "       'instrument'],\n",
       "      dtype='object')\n",
       "     low      updatedAt  timestamp   open    volume   high  close  \\\n",
-      "0  11.85  1668556629236 2022-11-14  12.61  16490625  15.27  13.97   \n",
-      "1  13.82  1668642936302 2022-11-15  13.92   8622213  15.14  14.29   \n",
-      "2  13.61  1668729364687 2022-11-16  14.05   5347337  14.58  14.25   \n",
-      "3  12.68  1668815776399 2022-11-17  14.39  13184228  14.46  13.63   \n",
-      "4  12.97  1668902073258 2022-11-18  13.73   5993585   13.8  13.26   \n",
+      "0  11.25  1669161413670 2022-11-21  12.25  11323859  12.25  11.83   \n",
+      "1   10.9  1669247588051 2022-11-22  11.78   9759895  12.51  12.44   \n",
+      "2  12.52  1669333939502 2022-11-23   12.6  14339244  14.75  14.35   \n",
+      "3  13.82  1669420736394 2022-11-24  14.12  11395942  14.95  14.61   \n",
+      "4  13.89  1669507133812 2022-11-25  14.16   5898925   14.5  14.02   \n",
       "\n",
       "                 instrument  \n",
       "0  SOLUSDT-OKX-00000000-FUT  \n",
@@ -326,6 +326,23 @@
       "Columns: []\n",
       "Index: []\n",
       "No valid data found for Tron. Skipping.\n",
+      "Columns in DataFrame for Bitcoin: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
+      "       'instrument'],\n",
+      "      dtype='object')\n",
+      "       low      updatedAt  timestamp     open    volume     high    close  \\\n",
+      "0  15438.8  1669161129115 2022-11-21  16272.1  12880851  16332.3    15782   \n",
+      "1  15629.8  1669247785602 2022-11-22  15872.2   9882221  16326.9  16229.3   \n",
+      "2  16168.8  1669334138459 2022-11-23    16187  10608899  16743.7    16606   \n",
+      "3  16462.3  1669420449694 2022-11-24  16562.4   7205909  16813.3    16607   \n",
+      "4    16350  1669506850078 2022-11-25  16530.6   5660628  16632.2  16523.9   \n",
+      "\n",
+      "                 instrument  \n",
+      "0  BTCUSDT-OKX-00000000-FUT  \n",
+      "1  BTCUSDT-OKX-00000000-FUT  \n",
+      "2  BTCUSDT-OKX-00000000-FUT  \n",
+      "3  BTCUSDT-OKX-00000000-FUT  \n",
+      "4  BTCUSDT-OKX-00000000-FUT  \n",
+      "Saved price data for Bitcoin to ./data\\price\\04_Bitcoin_price.csv\n",
       "Columns in DataFrame for BSC: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
@@ -342,24 +359,7 @@
       "2  BNBUSDT-OKX-00000000-FUT  \n",
       "3  BNBUSDT-OKX-00000000-FUT  \n",
       "4  BNBUSDT-OKX-00000000-FUT  \n",
-      "Saved price data for BSC to ./data\\price\\04_BSC_price.csv\n",
-      "Columns in DataFrame for Bitcoin: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
-      "       'instrument'],\n",
-      "      dtype='object')\n",
-      "       low      updatedAt  timestamp     open    volume     high    close  \\\n",
-      "0  15805.6  1668556343588 2022-11-14  16263.4  18074492    17200  16619.8   \n",
-      "1  16530.1  1668643133758 2022-11-15    16564  11099342  17123.5    16898   \n",
-      "2  16375.3  1668729561645 2022-11-16  16785.9   8477591  17017.8  16662.5   \n",
-      "3    16420  1668815974154 2022-11-17  16709.5   7283257    16750  16689.8   \n",
-      "4    16555  1668902270532 2022-11-18  16946.8   6071717  16988.8  16705.1   \n",
-      "\n",
-      "                 instrument  \n",
-      "0  BTCUSDT-OKX-00000000-FUT  \n",
-      "1  BTCUSDT-OKX-00000000-FUT  \n",
-      "2  BTCUSDT-OKX-00000000-FUT  \n",
-      "3  BTCUSDT-OKX-00000000-FUT  \n",
-      "4  BTCUSDT-OKX-00000000-FUT  \n",
-      "Saved price data for Bitcoin to ./data\\price\\05_Bitcoin_price.csv\n",
+      "Saved price data for BSC to ./data\\price\\05_BSC_price.csv\n",
       "Columns in DataFrame for Base: RangeIndex(start=0, stop=0, step=1)\n",
       "Empty DataFrame\n",
       "Columns: []\n",
@@ -402,12 +402,12 @@
       "Columns in DataFrame for Avalanche: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
-      "     low      updatedAt  timestamp   open   volume   high  close  \\\n",
-      "0  12.05  1668556761034 2022-11-14   12.7  1145366  13.61  13.13   \n",
-      "1  13.03  1668643067703 2022-11-15  13.06   735078  14.02  13.53   \n",
-      "2  12.81  1668729495902 2022-11-16  13.41   622147  13.73  13.06   \n",
-      "3  12.66  1668815908288 2022-11-17  13.11   705877  13.36  12.88   \n",
-      "4  12.89  1668902204748 2022-11-18  13.18   588856   13.3  13.01   \n",
+      "     low      updatedAt  timestamp   open  volume   high  close  \\\n",
+      "0  11.55  1669161545325 2022-11-21  12.11  826767  12.16   11.8   \n",
+      "1  11.42  1669247720021 2022-11-22  11.93  883759  12.37  12.34   \n",
+      "2  12.41  1669334071865 2022-11-23  12.44  731356  13.07  13.06   \n",
+      "3  12.75  1669420383566 2022-11-24  12.96  557318   13.4  12.96   \n",
+      "4  12.53  1669506784695 2022-11-25  12.83  417116  13.03  12.82   \n",
       "\n",
       "                  instrument  \n",
       "0  AVAXUSDT-OKX-00000000-FUT  \n",
@@ -416,15 +416,20 @@
       "3  AVAXUSDT-OKX-00000000-FUT  \n",
       "4  AVAXUSDT-OKX-00000000-FUT  \n",
       "Saved price data for Avalanche to ./data\\price\\09_Avalanche_price.csv\n",
+      "Columns in DataFrame for Polygon: RangeIndex(start=0, stop=0, step=1)\n",
+      "Empty DataFrame\n",
+      "Columns: []\n",
+      "Index: []\n",
+      "No valid data found for Polygon. Skipping.\n",
       "Columns in DataFrame for Aptos: Index(['low', 'updatedAt', 'timestamp', 'open', 'volume', 'high', 'close',\n",
       "       'instrument'],\n",
       "      dtype='object')\n",
       "      low      updatedAt  timestamp    open    volume    high   close  \\\n",
-      "0  3.7619  1668556749983 2022-11-14  3.9054  13392258  4.5114  4.1921   \n",
-      "1  4.1102  1668643056836 2022-11-15  4.1353  15913684  4.7199  4.3368   \n",
-      "2     4.1  1668729484921 2022-11-16  4.3052  20329759  4.9679  4.4961   \n",
-      "3  4.3529  1668815897187 2022-11-17   4.529  22133014  4.8432  4.6607   \n",
-      "4  4.5127  1668902193882 2022-11-18   4.642  15276392  4.9337  4.7231   \n",
+      "0   3.865  1669161534141 2022-11-21  4.0727  10424848  4.1545  4.0638   \n",
+      "1  3.8517  1669247709077 2022-11-22  4.0641  11278009  4.5366  4.3137   \n",
+      "2  4.2436  1669334060904 2022-11-23  4.2948   9468599  4.6051  4.4414   \n",
+      "3  4.2103  1669420372538 2022-11-24  4.4095  11955012    4.73    4.44   \n",
+      "4  4.2556  1669506773696 2022-11-25  4.3526   8295973  4.5583  4.4282   \n",
       "\n",
       "                 instrument  \n",
       "0  APTUSDT-OKX-00000000-FUT  \n",
@@ -432,12 +437,7 @@
       "2  APTUSDT-OKX-00000000-FUT  \n",
       "3  APTUSDT-OKX-00000000-FUT  \n",
       "4  APTUSDT-OKX-00000000-FUT  \n",
-      "Saved price data for Aptos to ./data\\price\\10_Aptos_price.csv\n",
-      "Columns in DataFrame for Polygon: RangeIndex(start=0, stop=0, step=1)\n",
-      "Empty DataFrame\n",
-      "Columns: []\n",
-      "Index: []\n",
-      "No valid data found for Polygon. Skipping.\n"
+      "Saved price data for Aptos to ./data\\price\\11_Aptos_price.csv\n"
      ]
     }
    ],
