--- a/etherscan/data_fetch.ipynb
+++ b/etherscan/data_fetch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
     "logging.basicConfig(level=logging.INFO, format=\"%(asctime)s - %(levelname)s - %(message)s\")\n",
     "logger = logging.getLogger()\n",
     "\n",
-    "START_DATE = \"2024-12-14 08:00\"\n",
-    "END_DATE = \"2024-12-16 08:00\"\n",
+    "START_DATE = \"2024-12-10 08:00\"\n",
+    "END_DATE = \"2024-12-12 08:00\" # so that when cenverting to UTC, it will be 00:00\n",
     "OUTPUT_FILE = 'C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result'\n",
     "api_key = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\" # my free API key, you can get one at https://etherscan.io/myapikey\n",
     "base_url = \"https://api.etherscan.io/v2/api\" # We're using the v2 API 2024/12/12\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,31 +113,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-17 12:03:40,064 - INFO - Fetching ERC20 transfers from block 21397030 to 21411357...\n"
+      "2024-12-19 16:30:21,070 - INFO - Fetching ERC20 transfers from block 21368389 to 21382703...\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "21397030 21411357\n"
+      "21368389 21382703\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-12-17 12:03:41,250 - INFO - Page 1: Retrieved 94 transactions.\n",
-      "2024-12-17 12:03:42,199 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
-      "2024-12-17 12:03:42,200 - INFO - Final dataset contains 94 unique transactions.\n",
-      "2024-12-17 12:03:42,200 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n"
+      "2024-12-19 16:30:22,021 - INFO - Page 1: Retrieved 35 transactions.\n",
+      "2024-12-19 16:30:22,971 - WARNING - API request failed on page 2: Request failed: No transactions found\n",
+      "2024-12-19 16:30:22,971 - INFO - Final dataset contains 35 unique transactions.\n",
+      "2024-12-19 16:30:22,988 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n"
      ]
     }
    ],
