--- a/etherscan/test.ipynb
+++ b/etherscan/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -64,8 +64,7 @@
     }
    ],
    "source": [
-    "from data_fetch_function import fetch_and_save_erc20_transfers, process_transactions\n",
-    "\n",
+    "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions\n",
     "\n",
     "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\"\n",
     "START_DATE = \"2024-12-10 08:00\"\n",
