加上了price以及一个小table的summary

--- a/etherscan/test.ipynb
+++ b/etherscan/test.ipynb
@@ -2,45 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "def cal_token_trades(data: pd.DataFrame, ADDRESS: str):\n",
+    "    ADDRESS = ADDRESS.lower()\n",
+    "    data['trade_type'] = data.apply(\n",
+    "        lambda x: 'sell' if x['from'] == ADDRESS else 'buy' if x['to'] == ADDRESS else None, axis=1\n",
+    "    )\n",
+    "    \n",
+    "    data = data[data['trade_type'].notnull()]\n",
+    "    buy_summary = data[data['trade_type'] == 'buy'].groupby('tokenSymbol').agg(\n",
+    "        total_buy_cost=('ActualValue', 'sum')\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    sell_summary = data[data['trade_type'] == 'sell'].groupby('tokenSymbol').agg(\n",
+    "        total_sell_proceeds=('ActualValue', 'sum')\n",
+    "    ).reset_index()\n",
+    "\n",
+    "    summary = pd.merge(buy_summary, sell_summary, on='tokenSymbol', how='outer').fillna(0)\n",
+    "\n",
+    "    summary['net_profit'] = summary['total_sell_proceeds'] - summary['total_buy_cost']\n",
+    "    # print(summary)\n",
+    "    return summary\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-12-23 17:41:22,029 - INFO - Start block: 18752097, End block: 21382703\n",
-      "2024-12-23 17:41:22,029 - INFO - Fetching ERC20 transfers from block 18752097 to 21382703...\n",
-      "2024-12-23 17:41:23,731 - INFO - Page 1: Retrieved 1000 transactions.\n",
-      "2024-12-23 17:41:25,415 - INFO - Page 2: Retrieved 1000 transactions.\n",
-      "2024-12-23 17:41:27,084 - INFO - Page 3: Retrieved 1000 transactions.\n",
-      "2024-12-23 17:41:28,817 - INFO - Page 4: Retrieved 1000 transactions.\n",
-      "2024-12-23 17:41:30,218 - INFO - Page 5: Retrieved 263 transactions.\n",
-      "2024-12-23 17:41:31,153 - WARNING - API request failed on page 6: Request failed: No transactions found\n",
-      "2024-12-23 17:41:31,153 - INFO - Final dataset contains 4263 unique transactions.\n",
-      "2024-12-23 17:41:31,224 - INFO - Data successfully saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\\erc20_transfers.csv\n",
-      "2024-12-23 17:41:31,225 - INFO - Transfers saved to C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\n"
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| tokenSymbol   |   total_buy_cost |   total_sell_proceeds |      net_profit |\n",
+      "+===============+==================+=======================+=================+\n",
+      "| APE           |             1.00 |                  0.00 |           -1.00 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| FLY           |        100000.00 |                  0.00 |      -100000.00 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| LMWR          |          3734.80 |                  0.00 |        -3734.80 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| MAGA          |          4747.00 |                  0.00 |        -4747.00 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| Niza          |          7320.00 |                  0.00 |        -7320.00 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| OPTIMUS       |         10000.00 |                  0.00 |       -10000.00 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| SAFE          |            12.35 |                  0.00 |          -12.35 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| USDC          |      43513882.83 |           35000000.00 |     -8513882.83 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| USDT          |       8056046.98 |            5000000.00 |     -3056046.98 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| WETH          |          1251.08 |                  0.00 |        -1251.08 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| WLFI          |  147500000769.70 |        53500000000.00 | -94000000769.70 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n",
+      "| cbBTC         |           102.90 |                  0.00 |         -102.90 |\n",
+      "+---------------+------------------+-----------------------+-----------------+\n"
      ]
     }
    ],
    "source": [
+    "from tabulate import tabulate\n",
     "from fetch_process_function import fetch_and_save_erc20_transfers, process_transactions, summarize_and_visualize\n",
     "\n",
     "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\"\n",
-    "START_DATE = \"2023-12-10 08:00\"\n",
+    "START_DATE = \"2024-12-06 08:00\"\n",
     "END_DATE = \"2024-12-12 08:00\"\n",
     "OUTPUT_FILE = \"C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\"\n",
     "API_KEY = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\"\n",
     "BASE_TOKENS = {\"USDT\", \"USDC\", \"USDE\"}\n",
-    "transfers_df = fetch_and_save_erc20_transfers(\n",
-    "        address=ADDRESS,\n",
-    "        start_date=START_DATE,\n",
-    "        end_date=END_DATE,\n",
-    "        output_file=OUTPUT_FILE,\n",
-    "        offset=1000,\n",
-    "    )\n",
-    "# final_record_df  = process_transactions(transfers_df, OUTPUT_FILE, ADDRESS, BASE_TOKENS)\n",
-    "# summary_df = summarize_and_visualize(final_record_df, BASE_TOKENS)"
+    "# transfers_df = fetch_and_save_erc20_transfers(\n",
+    "#         address=ADDRESS,\n",
+    "#         start_date=START_DATE,\n",
+    "#         end_date=END_DATE,\n",
+    "#         output_file=OUTPUT_FILE,\n",
+    "#         offset=1000,\n",
+    "#     )\n",
+    "transfers_df = pd.read_csv(OUTPUT_FILE + \"/all_erc20_transfers.csv\")\n",
+    "# final_record_df = process_transactions(transfers_df, OUTPUT_FILE, ADDRESS, BASE_TOKENS)\n",
+    "summary = cal_token_trades(transfers_df, ADDRESS)\n",
+    "print(tabulate(summary, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
+    "\n"
    ]
   },
   {
