--- a/etherscan/cal_PnL.ipynb
+++ b/etherscan/cal_PnL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -77,93 +77,15 @@
       "Formatted Transactions: part 1\n",
       "Formatted Transactions: part 2\n",
       "Formatted Transactions: final part\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| Date                |   timeStamp | Type   |   amount |    price |    pnl |\n",
-      "+=====================+=============+========+==========+==========+========+\n",
-      "| 2024-11-29 17:38:35 |  1732901915 | BUY    |     1.71 | 97182.48 |  12.07 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 17:38:59 |  1732901939 | BUY    |     3.77 | 97180.47 |  34.20 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 17:39:23 |  1732901963 | BUY    |     1.71 | 97195.96 | -10.99 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 17:41:35 |  1732902095 | BUY    |     1.71 | 97193.47 |  -6.71 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 17:42:47 |  1732902167 | BUY    |     0.68 | 97193.86 |  -2.94 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 17:58:23 |  1732903103 | BUY    |     0.68 | 97194.59 |  -3.43 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:00:35 |  1732903235 | BUY    |     3.77 | 97174.89 |  55.23 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:00:59 |  1732903259 | BUY    |     1.71 | 97190.93 |  -2.37 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:01:23 |  1732903283 | BUY    |     1.71 | 97169.33 |  34.54 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:04:47 |  1732903487 | BUY    |     0.68 | 97199.46 |  -6.75 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:05:11 |  1732903511 | BUY    |     0.68 | 97187.51 |   1.38 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:07:59 |  1732903679 | BUY    |     0.16 | 97189.08 |   0.07 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:08:47 |  1732903727 | BUY    |     1.71 | 97197.50 | -13.63 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:09:23 |  1732903763 | BUY    |     0.68 | 97183.94 |   3.81 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:10:23 |  1732903823 | BUY    |     3.77 | 97187.08 |   9.29 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:10:47 |  1732903847 | BUY    |     3.77 | 97170.51 |  71.81 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:11:11 |  1732903871 | BUY    |     3.77 | 97173.86 |  59.16 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:11:35 |  1732903895 | BUY    |     1.83 | 97180.67 |  16.20 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 18:11:59 |  1732903919 | BUY    |     1.71 | 97193.65 |  -7.04 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:04:47 |  1732907087 | BUY    |     1.71 | 97186.87 |   4.56 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:05:11 |  1732907111 | BUY    |     1.71 | 97192.80 |  -5.58 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:05:47 |  1732907147 | BUY    |     1.71 | 97177.31 |  20.90 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:06:11 |  1732907171 | BUY    |     1.71 | 97186.73 |   4.80 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:06:47 |  1732907207 | BUY    |     1.71 | 97181.71 |  13.38 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:07:35 |  1732907255 | BUY    |     1.71 | 97188.21 |   2.28 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:08:35 |  1732907315 | BUY    |     0.68 | 97196.56 |  -4.79 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:11:35 |  1732907495 | BUY    |     0.16 | 97184.30 |   0.86 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:12:47 |  1732907567 | BUY    |     1.71 | 97175.01 |  24.84 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:13:11 |  1732907591 | BUY    |     3.77 | 97177.88 |  43.96 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:13:35 |  1732907615 | BUY    |     1.71 | 97176.06 |  23.05 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:14:11 |  1732907651 | BUY    |     1.71 | 97187.41 |   3.64 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:14:59 |  1732907699 | BUY    |     3.77 | 97171.47 |  68.13 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:15:35 |  1732907735 | BUY    |     3.77 | 97163.90 |  96.72 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:15:59 |  1732907759 | BUY    |     3.77 | 97164.64 |  93.90 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:16:23 |  1732907783 | BUY    |     3.77 | 97164.42 |  94.73 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:16:47 |  1732907807 | BUY    |     3.77 | 97166.99 |  85.04 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:17:11 |  1732907831 | BUY    |     3.77 | 97181.86 |  28.95 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
-      "| 2024-11-29 19:17:35 |  1732907855 | BUY    |    24.04 | 97189.54 |   0.00 |\n",
-      "+---------------------+-------------+--------+----------+----------+--------+\n",
+      "Total unique tokens: 4\n",
+      "List of tokens: ['WLFI' 'cbBTC' 'WETH' 'OPTIMUS']\n",
       "Total PnL: 843.2596881283655\n"
      ]
     }
    ],
    "source": [
-    "\n",
     "ADDRESS = \"0x5be9a4959308A0D0c7bC0870E319314d8D957dBB\"\n",
-    "START_DATE = \"2024-12-06 08:00\" # Singapore Time， function will convert it to UTC\n",
+    "START_DATE = \"2024-12-06 08:00\" # Singapore Time，the function will convert it to UTC\n",
     "END_DATE = \"2024-12-12 08:00\"\n",
     "OUTPUT_FILE = \"C:/Users/YuweiCao/Documents/GitHub/Project/Project/etherscan/result\"\n",
     "API_KEY = \"VQAIR728IM4Z8RZKPYBR4ESM5I3WBZK2C1\"\n",
@@ -178,11 +100,18 @@
     "transfers_df = pd.read_csv(OUTPUT_FILE + \"/all_erc20_transfers.csv\")\n",
     "record_df_1, record_df_2, record_df_3 = process_transactions(transfers_df, OUTPUT_FILE, ADDRESS, BASE_TOKENS)\n",
     "# print(tabulate(summary, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
+    "unique_tokens_count = record_df_2[\"token_symbol\"].nunique()\n",
+    "\n",
+    "# 查看所有的代币种类\n",
+    "unique_tokens = record_df_2[\"token_symbol\"].unique()\n",
+    "\n",
+    "# 打印结果\n",
+    "print(f\"Total unique tokens: {unique_tokens_count}\")\n",
+    "print(f\"List of tokens: {unique_tokens}\")\n",
     "\n",
     "BTC_record_df = record_df_1[record_df_1[\"formatted_record\"].str.contains(r\"\\bcbBTC\\b\", regex=True)]\n",
     "# print(BTC_record_df['formatted_record'])\n",
     "pnl_df = calculate_pnl(BTC_record_df)\n",
-    "print(tabulate(pnl_df, headers='keys', tablefmt='grid', showindex=False, floatfmt=\".2f\"))\n",
     "print(f\"Total PnL: {pnl_df['pnl'].sum()}\")\n",
     "\n"
    ]
